hphp/test/zend/bad/ext/zlib/tests/ob_001.php
<?php
$_ENV[HTTP_ACCEPT_ENCODING] = gzip;

parse_str("a=b", $_GET);
$_REQUEST = array_merge($_REQUEST, $_GET);

echo "hi\n";
?>